--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300&display=swap');
+
 /*////////////////////////////////////////////////////////////////////////
 Table of Contents:
     1. Global Styles
@@ -10,40 +12,212 @@ Table of Contents:
         3.5 Footer
 ////////////////////////////////////////////////////////////////////////*/
 
-
-
 /*////////////////////////
     1. Global Styles
 ////////////////////////*/
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
+body {
+    font-family: Poppins, sans-serif;
+    color: #1C2B32
+}
 
+main {
+    max-width: 1000px;
+    margin: 0 auto;
+}
 
 /*////////////////////////
     2. Typography
 ////////////////////////*/
+h1 {
+    font-weight: 600;
+    font-size: 120px;
+}
 
+h2 {
+    font-weight: 600;
+    font-size: 36px;
+    margin: 64px 0;
+}
 
+h1, h2 {
+    text-align: center;
+}
+
+input, button {
+    font-family: inherit;
+}
+
+a,
+a:link,
+a:visited {
+    color: #899CA0;
+    text-decoration: underline;
+}
+
+a:hover {
+    text-decoration: none;
+}
 
 /*////////////////////////
     3. Areas
 ////////////////////////*/
 
 
-
 /*///////////// 3.1 Header /////////////*/
+header {
+    background-image: url("../assets/images/mountains.jpg");
+    background-size: cover;
+    background-position: top;
+}
 
+.header-div {
+    padding: 100px 0px 400px 0px;
+    margin: 0 auto;
+    max-width: 1000px;
+    text-align: center;
+}
 
+.domain-input {
+    margin-top: 32px;
+    background-color: transparent;
+    color: #1C2B32;
+    font-size: 18px;
+    padding: 24px 32px;
+    width: 350px;
+    border: 2px solid #1C2B32;
+    border-radius: 50px 0 0 50px;
+    outline: transparent;
+}
+
+.domain-input::placeholder {
+    color: #1C2B32;
+    font-size: 18px;
+}
+
+.domain-input:focus::placeholder {
+    color: transparent;
+}
+
+.check-domain-btn {
+    background-color: #1C2B32;
+    color: #ffffff;
+    font-size: 18px;
+    padding: 24px 32px;
+    border: 2px solid #1C2B32;
+    border-radius: 0 50px 50px 0;
+    outline: none;
+    margin-left: -5px;
+}
+
+.check-domain-btn:hover {
+    background-color: #899CA0;
+    color: #1C2B32;
+}
 
 /*///////////// 3.2 Testimonial /////////////*/
+.testimonial-section {
+    margin: 64px 0;
+}
 
+.testimonial-article {
+    position: relative;
+    padding: 64px 96px 64px 150px;
+    margin: 64px 0;
+    border-radius: 12px;
+    box-shadow: 0 8px 18px 2px rgba(24, 39, 75, 0.12),
+    0 6px 20px 4px rgba(24, 39, 75, 0.12);
+}
 
+.testimonial-quote {
+    margin-bottom: 24px;
+}
+
+.testimonial-quote-left-img {
+    position: absolute;
+    left: 100px;
+    top: 64px;
+}
+
+.testimonial-quote-headshot {
+    width: 44px;
+    height: 44px;
+    vertical-align: middle;
+}
+
+.testimonial-name {
+    display: inline;
+    margin-left: 24px;
+    font-style: italic;
+}
 
 /*///////////// 3.3 Support /////////////*/
+.support-section {
+    margin: 64px 0;
+}
 
+.support-img {
+    border-radius: 12px;
+    width: 100%;
+}
 
+.support-text {
+    margin: 24px 0;
+}
+
+.support-button {
+    color: #FFFFFF;
+    background-color: #1C2B32;
+    padding: 24px 32px;
+    font-size: 16px;
+    border: 2px solid #1C2B32;
+    border-radius: 50px;
+    outline: none;
+}
+
+.support-button:hover {
+    background-color: #899CA0;
+    color: #1C2B32;
+    cursor: pointer;
+}
 
 /*///////////// 3.4 Faq /////////////*/
+.faq-section {
+    margin: 64px 0;
+}
 
+.collapsible {
+    padding: 24px 32px;
+    color: #FFFFFF;
+    background-color: #899CA0;
+    border-radius: 12px;
+}
 
+.faq-details {
+    margin-block: 24px;
+}
+
+.faq-summary {
+    margin-bottom: 10px;
+}
+
+.faq-summary:hover {
+    cursor: pointer;
+}
 
 /*///////////// 3.5 Footer /////////////*/
+.footer {
+    background-color: #1C2B32;
+    padding-block: 36px;
+}
+
+.footer-copyright {
+    color: #FFFFFF;
+    font-size: 12px;
+    text-align: center;
+}
